--- a/ada.html
+++ b/ada.html
@@ -13,7 +13,7 @@
 
         </header>
       
-        <img src="img/foto-ada01.jpg" alt="Ada Lovelace" class="imgcentro">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt="Ada Lovelace" class="imgcentro">
         <p> Ada Augusta King, Condessa de Lovelace (Byron, 1815 - 1852),
             foi uma matemática e escritora inglesa. Ela foi a primeira a reconhecer que 
              máquinas poderiam ter aplicações além de puro calculos e criou primeiro 
