--- a/margareth.html
+++ b/margareth.html
@@ -10,7 +10,7 @@
 <body>
     <h1 id="titulo">  Margaret Heafield Hamilton </h1>
 
-    <img src="https://www.thoughtco.com/thmb/dLi9JoCO_WTzfb_pNvbnXCw5cqs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/GettyImages-514950046-5c60ae0e46e0fb000127c976.jpg">
+    <img src="https://news.yale.edu/sites/default/files/d6_files/YaleNews_hopper-grace.UNIVAC.102635875-CC_0.jpg">
 
     <p class="texto"> Margaret Heafield Hamilton (Paoli, 1936) é matemática, cientista da computação, engenheira de software e empresária.</p> 
 
