--- a/ada.html
+++ b/ada.html
@@ -14,23 +14,22 @@
         </header>
       
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Ada_Lovelace_portrait.jpg" alt="Ada Lovelace" class="imgcentro">
-        <p> Ada Augusta King, Condessa de Lovelace (Byron, 1815 - 1852),
-            foi uma matemática e escritora inglesa. Ela foi a primeira a reconhecer que 
-             máquinas poderiam ter aplicações além de puro calculos e criou primeiro 
-             algoritmo para ser processado por uma máquina, a máquina analítica de 
+        <p> Ada Augusta King, Condessa de Lovelace (Byron, 1815 - 1852),  foi uma matemática e escritora inglesa. Ela foi a primeira a reconhecer que 
+             máquinas poderiam ter aplicações além de puro calculos e criou primeiro algoritmo para ser processado por uma máquina, a máquina analítica de 
              Charles Babbage.</p>
 
-        <p> Durante o período em que esteve envolvida com o projeto de Babbage, ela desenvolveu os algoritmos que permitiriam a máquina computar <br>
+        <p> Durante o período em que esteve envolvida com o projeto de Babbage, ela desenvolveu os algoritmos que permitiriam a máquina computar 
             os valores de funções matemáticas, além de publicar uma coleção de notas sobre a máquina analítica.</p> 
 
         <p> Por esse trabalho é considerada a primeira programadora de computadores de toda a história. Vale lembrar que ela escreveu o programa em um papel, com 
             as instruções de como programar a máquina analítica, que nunca chegou a ser construída em seu tempo de vida. A Ada é até mesmo uma referência da cultura 
-            pop.<br>
-        </p>
+            pop. </p>
 
         <footer>
-         
+            <p>
+                Desenvolvido por: <i> Tiago </i> <br>
+                Contato: thiago@escola.pr.gov.br | (43) 9 9900-8866 <br>
+                Manoel Ribas - Paraná 
+            </p>
         </footer>
-
-
 </html>
