--- a/margareth.html
+++ b/margareth.html
@@ -10,19 +10,24 @@
 <body>
     <h1 id="titulo">  Margaret Heafield Hamilton </h1>
 
-    <img src="https://news.yale.edu/sites/default/files/d6_files/YaleNews_hopper-grace.UNIVAC.102635875-CC_0.jpg">
+    <img src="https://img.genially.com/660ec1343178890015b8acac/aabde3ad-6647-4f32-a601-dc874305a720.png" class="imgcentro">
 
     <p class="texto"> Margaret Heafield Hamilton (Paoli, 1936) é matemática, cientista da computação, engenheira de software e empresária.</p> 
 
-    Foi diretora da Divisão de Software no Laboratório de Instrumentação do MIT, que  desenvolveu o programa de voo usado no projeto Apollo 11, software que impediu que  o pouso na Lua fosse abortado por falha humana. Você entendeu bem: sem o programa que ela escreveu, nada de "pequeno passo para o homem, grande passo para a 
-    humanidade". Foi um grande passo para as mulheres também.</p> 
+    <p> Foi diretora da Divisão de Software no Laboratório de Instrumentação do MIT, que  desenvolveu o programa de voo usado no projeto Apollo 11, software que impediu que  o pouso na Lua fosse abortado por falha humana. Você entendeu bem: sem o programa que ela escreveu, nada de "pequeno passo para o homem, grande passo para a humanidade". Foi um grande passo para as mulheres também.</p> 
 
+    <p class="texto"> Em 1986 ela fundou sua própria empresa, a Hamilton Technologies Inc com sede em Cambridge. Onde desenvolveu seu paradigma para Sistemas e  Design de Software, o Development Before the Fact. </p>
 
-    <p class="texto"> Em 1986 ela fundou sua própria empresa, a Hamilton Technologies Inc com sede em Cambridge. Onde desenvolveu seu paradigma para Sistemas e     Design de Software, o Development Before the Fact. </p>
-
-    <p> Além de ser creditada por ter criado o termo "engenharia de software", foi uma  das desenvolvedoras dos conceitos de computação paralela, priority scheduling, teste de sistema, e capacidade de decisão com integração humana, tais como mostradores de prioridade que viriam a ser o fundamento do design de software 
-    ultra confiável. </p>
+    <p> Além de ser creditada por ter criado o termo "engenharia de software", foi uma  das desenvolvedoras dos conceitos de computação paralela, priority scheduling, teste de sistema, e capacidade de decisão com integração humana, tais como mostradores de prioridade que viriam a ser o fundamento do design de software ultra confiável. </p>
             
     <p> Foi premiada com a Medalha Presidencial da Liberdade pelo presidente dos EUA Barack Obama, maior honra a um civil daquele país. </p>
+
+        <footer>
+            <p>
+                Desenvolvido por: <i> Tiago </i> <br>
+                Contato: thiago@escola.pr.gov.br | (43) 9 9900-8866 <br>
+                Manoel Ribas - Paraná 
+            </p>
+        </footer>
 </body>
 </html>
