--- a/margareth.html
+++ b/margareth.html
@@ -8,7 +8,9 @@
     <title> Margareth Heafield Hamilton </title>
 </head>
 <body>
-    <h1 id="titulo">  Margaret Heafield Hamilton </h1>
+    <header>
+        <h1 id="titulo">  Margaret Heafield Hamilton </h1>
+    </header>
 
     <img src="https://img.genially.com/660ec1343178890015b8acac/aabde3ad-6647-4f32-a601-dc874305a720.png" class="imgcentro">
 
