--- a/grace.html
+++ b/grace.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Grace Murray Hopper </title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1> Grace Murray Hopper </h1>
+    <header>
+        <h1> Grace Murray Hopper </h1>
+    </header>
     <img src="grace.jpg" alt="Grace Murray Hopper" class="">
     <p class="texto"> Grace Murray Hopper (Nova Iorque, 1906 - 1992) foi Ph.D. em Matemática, analista de sistemas da
         Marinha dos Estados Unidos nas décadas
