--- a/grace.html
+++ b/grace.html
@@ -13,7 +13,7 @@
     <header>
         <h1> Grace Murray Hopper </h1>
     </header>
-    <img src="grace.jpg" alt="Grace Murray Hopper" class="">
+    <img src="https://stories.vassar.edu/2020/assets/images/grace-hopper-at-computer.jpg" alt="Grace Murray Hopper" class="">
     <p class="texto"> Grace Murray Hopper (Nova Iorque, 1906 - 1992) foi Ph.D. em Matemática, analista de sistemas da
         Marinha dos Estados Unidos nas décadas
         de 1940 e 1950 e almirante.</p>
